[gd_scene load_steps=13 format=3 uid="uid://dbe55l72x01mc"]

[ext_resource type="Script" path="res://Scripts/Levels/debug_level.gd" id="1_eteu7"]
[ext_resource type="PackedScene" uid="uid://dujgwpibibjgl" path="res://Scenes/UI/vignette.tscn" id="2_djxmw"]
[ext_resource type="Resource" uid="uid://vslpqt6sx2yf" path="res://Resources/Level/level1.tres" id="2_kyjcp"]
[ext_resource type="PackedScene" uid="uid://ojcv63rkefwv" path="res://Scenes/UI/arena_time_ui.tscn" id="3_8ndlo"]
[ext_resource type="PackedScene" uid="uid://ucpeyg8oo82s" path="res://Scenes/UI/experience_bar.tscn" id="4_mu8jf"]
[ext_resource type="PackedScene" uid="uid://dx4xt66rgiiv8" path="res://Scenes/Managers/arena_time_manager.tscn" id="5_3cs6p"]
[ext_resource type="PackedScene" uid="uid://c1m7beb2vo6hq" path="res://Scenes/Managers/enemy_manager.tscn" id="6_3y6hh"]
[ext_resource type="PackedScene" uid="uid://dlr0jj3c54smu" path="res://Scenes/Managers/upgrade_manager.tscn" id="7_ja5w6"]
[ext_resource type="PackedScene" uid="uid://cg08j6y8tvvuo" path="res://Scenes/Managers/experience_manager.tscn" id="8_fvygu"]
[ext_resource type="Resource" uid="uid://ba52adg337cfr" path="res://Resources/Upgrades/Book/Bible/book_bible_ability_card.tres" id="9_cb0ca"]
[ext_resource type="PackedScene" uid="uid://b7siy8nhaor26" path="res://Scenes/GameCamera/game_camera.tscn" id="9_jhfty"]
[ext_resource type="PackedScene" uid="uid://u8x0f7nqkupw" path="res://Scenes/Player/player.tscn" id="10_mutcc"]

[node name="Debug_Level" type="Node"]
script = ExtResource("1_eteu7")
level_resource = ExtResource("2_kyjcp")

[node name="UI" type="Node" parent="."]

[node name="Vignette" parent="UI" instance=ExtResource("2_djxmw")]

[node name="ArenaTimeUI" parent="UI" node_paths=PackedStringArray("arena_timer_manager") instance=ExtResource("3_8ndlo")]
arena_timer_manager = NodePath("../../Managers/ArenaTimeManager")

[node name="ExperienceBar" parent="UI" node_paths=PackedStringArray("experience_manager") instance=ExtResource("4_mu8jf")]
experience_manager = NodePath("../../Managers/ExperienceManager")

[node name="Managers" type="Node" parent="."]

[node name="ArenaTimeManager" parent="Managers" instance=ExtResource("5_3cs6p")]

[node name="EnemyManager" parent="Managers" node_paths=PackedStringArray("arena_time_manager") instance=ExtResource("6_3y6hh")]
arena_time_manager = NodePath("../ArenaTimeManager")

[node name="UpgradeManager" parent="Managers" node_paths=PackedStringArray("experience_manager") instance=ExtResource("7_ja5w6")]
experience_manager = NodePath("../ExperienceManager")
abilities = Array[Resource("res://Scripts/Upgrades/ability_upgrade.gd")]([ExtResource("9_cb0ca")])

[node name="ExperienceManager" parent="Managers" instance=ExtResource("8_fvygu")]

[node name="Level" type="Node" parent="."]

[node name="GameCamera" parent="." instance=ExtResource("9_jhfty")]

[node name="Background" type="Node2D" parent="." groups=["background_layer"]]

[node name="Entities" type="Node2D" parent="." groups=["entities_layer"]]
y_sort_enabled = true

[node name="Player" parent="Entities" instance=ExtResource("10_mutcc")]
unique_name_in_owner = true
position = Vector2(484, 252)

[node name="Foreground" type="Node2D" parent="." groups=["foreground_layer"]]
